# 2023-talk-pycascades-sharing-pytest-fixtures

./: README.md
code/no_sharing/: test_example.py
code/sharing_between_projects/pytest-crayons/: README.md  pyproject.toml  tox.ini
code/sharing_between_projects/pytest-crayons-hatchling/: .coveragerc.bak  pyproject.toml  tox.ini
code/sharing_between_projects/pytest-crayons-hatchling/examples/: test_example_two.py
code/sharing_between_projects/pytest-crayons-setuptools/: pyproject.toml  tox.ini
code/sharing_between_projects/pytest-crayons-setuptools/tests/: test_colors.py
code/sharing_between_projects/pytest-crayons/examples/: test_example.py
code/sharing_between_projects/pytest-crayons/tests/: test_colors.py
code/sharing_in_the_same_directory/: conftest.py  test_example_two.py
code/sharing_in_the_same_project/one/: test_example.py
